# cognition

./: .gitignore  LICENSE  README.md  meson.build
src/: main.c  nk.c  nk.h  tests.c  tests.h  timing.c  timing.h
src/tests/: latency.c  reaction_time.c
